--- a/404.html
+++ b/404.html
@@ -7,7 +7,8 @@ sitemap:
 ---
 
 <h2 class="go-home">
-I suggest you get <a href="{{ '/' | prepend: site.baseurl }}">home</a>, it's 404 and it's getting dark!
+  あなたが得る  <a href="{{ '/' | prepend: site.baseurl }}">ビースト </a>, これは404です、そして、暗くなっています！
+ 
 </h2>
 
 
